--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             var options = {
                 type:'book',
-                title:'the old man and the sea'
+                title:'One Flew Over the Cuckoos Nest'
             };
 
 
